# oes-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/oes/template/: __init__.py  env.py  expression.py  logic.py  serialization.py  template.py  types.py
tests/: test_expression.py  test_logic.py  test_template.py
