[tool.poetry]
name = "oes-template"
version = "0.2.0"
description = "Library for working with templates and expressions"
authors = [
    "Wes <wes@anthronewengland.com>",
    "Anadon <anadon@furpocalypse.org>",
    "Polar <polar@furpocalypse.org>"
]
license = "LGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "oes", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
jinja2 = "^3.1.2"
attrs = "^22.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
coverage = "^7.2.3"
cattrs = "^22.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
